--- a/TrafficLight/TrafficLight.csproj
+++ b/TrafficLight/TrafficLight.csproj
@@ -123,6 +123,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="objects\Character.cs" />
     <Compile Include="objects\Dog.cs" />
     <Compile Include="objects\Santa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -188,6 +189,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
